fix: regulate overflow

--- a/mdi-react/src/index.css
+++ b/mdi-react/src/index.css
@@ -1,9 +1,3 @@
-@import "styles/colors.scss";
-@import "styles/fonts.scss";
-
-
-/* Need to implement variable styles to these colors*/
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,7 +5,7 @@
 
   color-scheme: light dark;
   color: #ffffffde;
-  background-color: #242424;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,11 +15,12 @@
 
 body {
   margin: 0;
+  overflow: auto;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #ffffff;
+  
 }
 
 h1 {
